--- a/index.html
+++ b/index.html
@@ -5,24 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <style>
+      .row {
+        border: 1px solid;
+      }
+    </style>
   </head>
-<body>
-   <div class="container">
+<body ng-app="NarrowItDownApp">
+   <div class="container" ng-controller="NarrowItDownController as ctrl">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-    <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
-    </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
-    </div>
+    <form class="form-inline">
+      <div class="form-group">
+        <input type="text" placeholder="search term" class="form-control" ng-model="ctrl.search_term">
+      </div>
+      <button class="btn btn-primary" ng-click="ctrl.narrowItems()">Narrow It Down For Me!</button>
+    </form>
 
+    <br>
+    <!-- found-items should be implemented as a component -->
+    <p ng-if="ctrl.show_message">Nothing found</p>
+    <found-items
+      items="ctrl.found"
+      on-remove="ctrl.removeItem(index)" ng-if="ctrl.found.length"></found-items>
     <!-- Bonus loader (see Bonus section of the assignment) -->
     <items-loader-indicator></items-loader-indicator>
-
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
   </div>
-
+  <script src="js/angular.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="loader/loader.module.js"></script>
+  <script src="loader/loader.component.js"></script>
 </body>
 </html>
