--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Bonus loader (see Bonus section of the assignment) -->
     <items-loader-indicator></items-loader-indicator>
 
-    <!-- found-items should be implemented as a component -->
+    <!-- found-items should be implemented as a directive -->
     <found-items found-items="ctrl.found" on-remove="ctrl.removeItem(index);" ng-if="ctrl.found.length"></found-items>
     <div class="error" ng-if="ctrl.error">Nothing found</div>
 
